--- a/WebKiosk/Properties/Settings.settings
+++ b/WebKiosk/Properties/Settings.settings
@@ -1,7 +1,15 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="WebKiosk.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="BaseURL" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">https://sap-prx.ugmk.com:441/ummc/kiosk</Value>
+    </Setting>
+    <Setting Name="COMPort" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">COM15</Value>
+    </Setting>
+    <Setting Name="DecodeXOR" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
