--- a/WebKiosk/App.config
+++ b/WebKiosk/App.config
@@ -1,6 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WebKiosk.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WebKiosk.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <WebKiosk.Properties.Settings>
+            <setting name="DecodeXOR" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </WebKiosk.Properties.Settings>
+    </userSettings>
+    <applicationSettings>
+        <WebKiosk.Properties.Settings>
+            <setting name="BaseURL" serializeAs="String">
+                <value>http://iamqq.shared.sioru.com/webkiosk/WebKioskFrontend/</value>
+            </setting>
+            <setting name="COMPort" serializeAs="String">
+                <value>COM3</value>
+            </setting>
+        </WebKiosk.Properties.Settings>
+    </applicationSettings>
 </configuration>
