--- a/WebKiosk/Properties/Settings.settings
+++ b/WebKiosk/Properties/Settings.settings
@@ -3,10 +3,10 @@
   <Profiles />
   <Settings>
     <Setting Name="BaseURL" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">https://sap-prx.ugmk.com:441/ummc/kiosk</Value>
+      <Value Profile="(Default)">http://iamqq.shared.sioru.com/webkiosk/WebKioskFrontend/</Value>
     </Setting>
     <Setting Name="COMPort" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">COM15</Value>
+      <Value Profile="(Default)">COM3</Value>
     </Setting>
     <Setting Name="DecodeXOR" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
